--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
     "axios": "^1.7.3",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.12.5",
     "framer-motion": "^11.3.21",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
